--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: Publish package to GitHub Packages
-on: push
-#on:
-#  release:
-#    types: [created]
+on:
+ release:
+   types: [created]
+   branches:
+     - 'main'
 jobs:
   publish:
     runs-on: ubuntu-latest
