--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,22 +1,87 @@
 name: Publish package to GitHub Packages
+
 on:
- release:
-   types: [created]
-   branches:
-     - 'main'
+  push:
+    tags:
+      - 'v*'
+
 jobs:
-  publish:
+  release:
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
+
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
-      - uses: actions/checkout@v5
-      - uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
         with:
           java-version: '20'
           distribution: 'temurin'
-      - name: Publish package
+          server-id: github              # matches <server> in pom.xml distributionManagement
+          server-username: GITHUB_ACTOR
+          server-password: GITHUB_TOKEN
+
+      - name: Determine version from pom.xml
+        id: version
+        run: |
+          VERSION=$(mvn -q \
+            -Dexpression=project.version \
+            -DforceStdout \
+            help:evaluate)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Show version
+        run: echo "Releasing lib-version ${VERSION}"
+
+      - name: Build and deploy to GitHub Packages
         run: mvn --batch-mode deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN_DANIEL }}
+
+      - name: Prepare next development iteration
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          # Extract current version (e.g. 1.2.3)
+          CURRENT_VERSION=$(mvn -q \
+            -Dexpression=project.version \
+            -DforceStdout \
+            help:evaluate)
+
+          echo "Current version: $CURRENT_VERSION"
+
+          # Strip SNAPSHOT if somehow present
+          CURRENT_VERSION=${CURRENT_VERSION%-SNAPSHOT}
+
+          # Split into major, minor, patch
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
+
+          # Compute next patch version
+          NEXT_PATCH=$((PATCH + 1))
+          NEXT_VERSION="${MAJOR}.${MINOR}.${NEXT_PATCH}-SNAPSHOT"
+
+          echo "Next version will be: $NEXT_VERSION"
+
+          # Switch to main branch
+          git fetch origin main
+          git checkout main
+          git pull origin main
+
+          # Update version in pom.xml
+          mvn -B versions:set -DnewVersion="${NEXT_VERSION}"
+          mvn -B versions:commit
+
+          # Commit & push the new snapshot version
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add pom.xml
+          git commit -m "chore: start next development iteration ${NEXT_VERSION}"
+          git push origin main
