--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       packages: write
 
     env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GH_TOKEN_DANIEL }}
 
     steps:
       - name: Checkout
@@ -25,7 +25,7 @@ jobs:
         with:
           java-version: '20'
           distribution: 'temurin'
-          server-id: github              # matches <server> in pom.xml distributionManagement
+          server-id: github
           server-username: GITHUB_ACTOR
           server-password: GITHUB_TOKEN
 
