--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -14,7 +14,7 @@ jobs:
       packages: write
 
     env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN_DANIEL }}
+      GITHUB_TOKEN: ${{ secrets.GH_TOKEN_IEVA }}
 
     steps:
       - name: Checkout repository
@@ -25,24 +25,27 @@ jobs:
         with:
           java-version: '20'
           distribution: 'temurin'
+          server-id: github
+          server-username: GITHUB_ACTOR
+          server-password: GITHUB_TOKEN
 
       - name: Compute pre-release version
         id: prerelease
         run: |
-            BASE=$(sed -n 's:.*<version>\(.*\)</version>.*:\1:p' pom.xml | head -1 | sed 's/-SNAPSHOT//')
+            BASE=$(mvn -q -DforceStdout -Dexpression=project.version help:evaluate)
+            BASE=${BASE%-SNAPSHOT}
             BRANCH=${GITHUB_REF_NAME//\//-}
             UNIQUE=$(date +'%Y%m%d%H%M%S')
-            PRERELEASE="${BASE}-${BRANCH}-${UNIQUE}"
-            echo "Computed pre-release version: $PRERELEASE"
-            echo "pre_version=$PRERELEASE" >> "$GITHUB_OUTPUT"
+            SHA=$(git rev-parse --short HEAD)
+            PRERELEASE="${BASE}-${BRANCH}-${UNIQUE}-${SHA}"
+            echo "pre_version=$PRERELEASE" >> $GITHUB_OUTPUT
+            echo "Computed prerelease version: $PRERELEASE"
 
       - name: Set pre-release version in pom.xml
         run: |
           mvn -B versions:set -DnewVersion=${{ steps.prerelease.outputs.pre_version }} -DgenerateBackupPoms=false
 
-      - name: Build and deploy pre-release
-        run: |
-          mvn -B clean deploy -DskipTests \
-            -DaltDeploymentRepository=github::https://maven.pkg.github.com/doda2025-team3/lib-version \
-            -Dusername=${{ github.actor }} \
-            -Dpassword=${{ secrets.GH_TOKEN_DANIEL }}
+      - name: Build & deploy prerelease
+        run: mvn -B clean deploy -DskipTests
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_IEVA }}
