--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Publish package to GitHub Packages
+name: Publish package to GitHub Packages (Stable)
 
 on:
   push:
@@ -29,51 +29,67 @@ jobs:
           server-username: GITHUB_ACTOR
           server-password: GITHUB_TOKEN
 
-      - name: Determine version from pom.xml
-        id: version
+      - name: Read current version from pom.xml (SNAPSHOT)
+        id: current
         run: |
           VERSION=$(mvn -q \
             -Dexpression=project.version \
             -DforceStdout \
             help:evaluate)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "current version=$VERSION"
 
-      - name: Show version
-        run: echo "Releasing lib-version ${VERSION}"
+          case "$VERSION" in
+            *-SNAPSHOT) ;;
+            *)
+              echo "ERROR: main must be on SNAPSHOT version"
+              exit 1
+              ;;
+          esac
+
+      - name: Compute version for release
+        id: release
+        run: |
+          RELEASE="${{ steps.current.outputs.version }}"
+          RELEASE="${RELEASE%-SNAPSHOT}"
+          echo "release=$RELEASE" >> $GITHUB_OUTPUT
+          echo "Release version: $RELEASE"
+
+      - name: Set the release version
+        run: |
+          mvn -B versions:set -DnewVersion="${{ steps.release.outputs.release }}" -DgenerateBackupPoms=false
+          mvn -B versions:commit
+
+      - name: Commit the release
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add pom.xml
+          git commit -m "release version: v${{ steps.release.outputs.release }}"
+
+      - name: Tag the release
+        run: |
+          git tag "v${{ steps.release.outputs.release }}"
+          git push origin main
+          git push origin "v${{ steps.release.outputs.release }}"
 
       - name: Build and deploy to GitHub Packages
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode clean deploy -DskipTests
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN_DANIEL }}
 
       - name: Prepare next development iteration
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          # Extract current version (e.g. 1.2.3)
-          CURRENT_VERSION=$(mvn -q \
-            -Dexpression=project.version \
-            -DforceStdout \
-            help:evaluate)
-
-          echo "Current version: $CURRENT_VERSION"
-
           # Strip SNAPSHOT if somehow present
-          CURRENT_VERSION=${CURRENT_VERSION%-SNAPSHOT}
+          RELEASE=${{ steps.release.outputs.release }}
 
           # Split into major, minor, patch
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$RELEASE"
 
           # Compute next patch version
           NEXT_PATCH=$((PATCH + 1))
           NEXT_VERSION="${MAJOR}.${MINOR}.${NEXT_PATCH}-SNAPSHOT"
-
-          echo "Next version will be: $NEXT_VERSION"
-
-          # Switch to main branch
-          git fetch origin main
-          git checkout main
-          git pull origin main
 
           # Update version in pom.xml
           mvn -B versions:set -DnewVersion="${NEXT_VERSION}"
