--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,7 @@
 name: Publish package to GitHub Packages (Stable)
 
 on:
-  push:
-    tags:
-      - 'v*'
+  workflow_dispatch:
 
 jobs:
   release:
@@ -17,8 +15,11 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GH_TOKEN_DANIEL }}
 
     steps:
-      - name: Checkout
+      - name: Checkout main
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: main
 
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -36,8 +37,8 @@ jobs:
             -Dexpression=project.version \
             -DforceStdout \
             help:evaluate)
-          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
-          echo "current version=$VERSION"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "current version: $VERSION"
 
           case "$VERSION" in
             *-SNAPSHOT) ;;
@@ -60,7 +61,7 @@ jobs:
           mvn -B versions:set -DnewVersion="${{ steps.release.outputs.release }}" -DgenerateBackupPoms=false
           mvn -B versions:commit
 
-      - name: Commit the release
+      - name: Commit the release version
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
@@ -79,7 +80,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN_DANIEL }}
 
       - name: Prepare next development iteration
-        if: startsWith(github.ref, 'refs/tags/')
         run: |
           # Strip SNAPSHOT if somehow present
           RELEASE=${{ steps.release.outputs.release }}
