--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   prerelease:
+    if: "!contains(github.event.head_commit.message, '[skip prerelease]')"
     runs-on: ubuntu-latest
 
     permissions:
@@ -18,7 +19,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: ${{ github.ref_name }}
@@ -50,7 +51,7 @@ jobs:
 
       - name: Set pre-release version in pom.xml
         run: |
-          mvn -B versions:set -DnewVersion=${{ steps.prerelease.outputs.pre_version }} -DgenerateBackupPoms=false
+          mvn -B versions:set -DnewVersion="${{ steps.prerelease.outputs.pre_version }}"" -DgenerateBackupPoms=false
           mvn -B versions:commit
           
       - name: Commit updated prerelease version
@@ -58,15 +59,15 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add pom.xml
-          git commit -m "chore: update pre-release version to ${{ steps.prerelease.outputs.pre_version }}" || echo "No changes to commit"
+          git commit -m "chore: update pre-release version to ${{ steps.prerelease.outputs.pre_version }} [skip prerelease]" || echo "No changes to commit"
           git push origin HEAD:${GITHUB_REF_NAME}
 
       - name: Tag prerelease (tag matches version in pom)
         run: |
           # TAG="pre-${{ steps.prerelease.outputs.branch }}-${{ steps.prerelease.outputs.unique }}-${{ steps.prerelease.outputs.sha }}"
           TAG="pre-${{ steps.prerelease.outputs.pre_version }}"
-          git tag $TAG
-          git push origin $TAG
+          git tag "$TAG"
+          git push origin "$TAG"
 
       - name: Build and deploy prerelease
         run: mvn -B clean deploy -DskipTests
