Added versions plugin and changed version

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.doda2025group3.app</groupId>
   <artifactId>lib-version</artifactId>
-  <version>1.0.7-excellent-attempt-20251231123516-5cb22fb</version>
+  <version>1.0.7-SNAPSHOT</version>
 
   <name>lib-version</name>
   <!-- FIXME change it to the project's website -->
@@ -91,6 +91,11 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.6.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>2.16.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
