--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -49,18 +49,15 @@ jobs:
             echo "sha=$SHA" >> $GITHUB_OUTPUT
             echo "Computed prerelease version: $PRERELEASE"
 
-      - name: Set pre-release version in pom.xml
+      - name: Stamp version for this build (we do not commit - messy)
         run: |
-          mvn -B versions:set -DnewVersion="${{ steps.prerelease.outputs.pre_version }}" -DgenerateBackupPoms=false
+          mvn -B versions.set -DnewVersion="${{ steps.prerelease.outputs.pre_version }}" -DgenerateBackupPoms=false
           mvn -B versions:commit
-          
-      - name: Commit updated prerelease version
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git add pom.xml
-          git commit -m "chore: update pre-release version to ${{ steps.prerelease.outputs.pre_version }} [skip prerelease]" || echo "No changes to commit"
-          git push origin HEAD:${GITHUB_REF_NAME}
+
+      - name: Build and deploy prerelease
+        run: mvn -B clean deploy -DskipTests
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_IEVA }}
 
       - name: Tag prerelease (tag matches version in pom)
         run: |
@@ -68,8 +65,3 @@ jobs:
           TAG="pre-${{ steps.prerelease.outputs.pre_version }}"
           git tag "$TAG"
           git push origin "$TAG"
-
-      - name: Build and deploy prerelease
-        run: mvn -B clean deploy -DskipTests
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_IEVA }}
