--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Stamp version for this build (we do not commit - messy)
         run: |
-          # mvn -B versions:set -DnewVersion="${{ steps.prerelease.outputs.pre_version }}" -DgenerateBackupPoms=false
+          mvn -B versions:set -DnewVersion="${{ steps.prerelease.outputs.pre_version }}" -DgenerateBackupPoms=false
           mvn -B versions:commit
 
       - name: Build and deploy prerelease
@@ -65,3 +65,6 @@ jobs:
           TAG="pre-${{ steps.prerelease.outputs.pre_version }}"
           git tag "$TAG"
           git push origin "$TAG"
+
+      - name: Reset POM file
+        run: git checkout -- pom.xml
